// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp snapshot 1`] = `
Object {
  "constants": Array [],
  "displayName": "AuthorizationToken",
  "docs": Object {
    "links": Array [
      "https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html",
    ],
    "summary": "Authorization token to access private ECR repositories in the current environment via Docker CLI.",
  },
  "fqn": "Amazon.CDK.AWS.ECR.AuthorizationToken",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken",
  "initializer": undefined,
  "instanceMethods": Array [],
  "interfaces": Array [],
  "properties": Array [],
  "staticMethods": Array [
    Object {
      "displayName": "GrantRead",
      "docs": Object {
        "summary": "Grant access to retrieve an authorization token.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.AuthorizationToken.GrantRead",
      "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
      "parameters": Array [
        Object {
          "default": undefined,
          "displayName": "Grantee",
          "docs": Object {},
          "fqn": "Amazon.CDK.AWS.ECR.AuthorizationToken.GrantRead.parameter.Grantee",
          "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
          "optional": undefined,
          "type": Object {
            "formattingPattern": "%",
            "types": Array [
              Object {
                "displayName": "IGrantable",
                "fqn": "Amazon.CDK.AWS.IAM.IGrantable",
                "id": "@aws-cdk/aws-iam.IGrantable",
                "packageName": "@aws-cdk/aws-iam",
                "packageVersion": "99.99.99",
              },
            ],
          },
        },
      ],
      "usage": "using Amazon.CDK.AWS.ECR;

AuthorizationToken.GrantRead(IGrantable Grantee);",
    },
  ],
}
`;

exports[`csharp snapshot 2`] = `
" AuthorizationToken <a name=\\"AuthorizationToken\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken\\"></a>

Authorization token to access private ECR repositories in the current environment via Docker CLI.

> [https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html](https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html)


# Static Methods <a name=\\"Static Methods\\" id=\\"Static Methods\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code>GrantRead</code> | Grant access to retrieve an authorization token. |

---

**<code>GrantRead</code>**
\`\`\`csharp
using Amazon.CDK.AWS.ECR;

AuthorizationToken.GrantRead(IGrantable Grantee);
\`\`\`

Grant access to retrieve an authorization token.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>Grantee</code> | <code>Amazon.CDK.AWS.IAM.IGrantable</code> | *No description.* |


"
`;

exports[`go snapshot 1`] = `
Object {
  "constants": Array [],
  "displayName": "AuthorizationToken",
  "docs": Object {
    "links": Array [
      "https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html",
    ],
    "summary": "Authorization token to access private ECR repositories in the current environment via Docker CLI.",
  },
  "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.AuthorizationToken",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken",
  "initializer": undefined,
  "instanceMethods": Array [],
  "interfaces": Array [],
  "properties": Array [],
  "staticMethods": Array [
    Object {
      "displayName": "GrantRead",
      "docs": Object {
        "summary": "Grant access to retrieve an authorization token.",
      },
      "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.AuthorizationToken.GrantRead",
      "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
      "parameters": Array [
        Object {
          "default": undefined,
          "displayName": "grantee",
          "docs": Object {},
          "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.AuthorizationToken.GrantRead.parameter.grantee",
          "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
          "optional": undefined,
          "type": Object {
            "formattingPattern": "%",
            "types": Array [
              Object {
                "displayName": "IGrantable",
                "fqn": "github.com/aws/aws-cdk-go/awscdk/awsiam/awscdkawsiam.IGrantable",
                "id": "@aws-cdk/aws-iam.IGrantable",
                "packageName": "@aws-cdk/aws-iam",
                "packageVersion": "99.99.99",
              },
            ],
          },
        },
      ],
      "usage": "import \\"github.com/aws/aws-cdk-go/awscdkawsecr\\"

awscdkawsecr.AuthorizationToken_GrantRead(grantee IGrantable)",
    },
  ],
}
`;

exports[`go snapshot 2`] = `
" AuthorizationToken <a name=\\"AuthorizationToken\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken\\"></a>

Authorization token to access private ECR repositories in the current environment via Docker CLI.

> [https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html](https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html)


# Static Methods <a name=\\"Static Methods\\" id=\\"Static Methods\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code>GrantRead</code> | Grant access to retrieve an authorization token. |

---

**<code>GrantRead</code>**
\`\`\`go
import \\"github.com/aws/aws-cdk-go/awscdkawsecr\\"

awscdkawsecr.AuthorizationToken_GrantRead(grantee IGrantable)
\`\`\`

Grant access to retrieve an authorization token.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>grantee</code> | <code>github.com/aws/aws-cdk-go/awscdk/awsiam/awscdkawsiam.IGrantable</code> | *No description.* |


"
`;

exports[`java snapshot 1`] = `
Object {
  "constants": Array [],
  "displayName": "AuthorizationToken",
  "docs": Object {
    "links": Array [
      "https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html",
    ],
    "summary": "Authorization token to access private ECR repositories in the current environment via Docker CLI.",
  },
  "fqn": "software.amazon.awscdk.services.ecr.AuthorizationToken",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken",
  "initializer": undefined,
  "instanceMethods": Array [],
  "interfaces": Array [],
  "properties": Array [],
  "staticMethods": Array [
    Object {
      "displayName": "grantRead",
      "docs": Object {
        "summary": "Grant access to retrieve an authorization token.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.AuthorizationToken.grantRead",
      "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
      "parameters": Array [
        Object {
          "default": undefined,
          "displayName": "grantee",
          "docs": Object {},
          "fqn": "software.amazon.awscdk.services.ecr.AuthorizationToken.grantRead.parameter.grantee",
          "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
          "optional": undefined,
          "type": Object {
            "formattingPattern": "%",
            "types": Array [
              Object {
                "displayName": "IGrantable",
                "fqn": "software.amazon.awscdk.services.iam.IGrantable",
                "id": "@aws-cdk/aws-iam.IGrantable",
                "packageName": "@aws-cdk/aws-iam",
                "packageVersion": "99.99.99",
              },
            ],
          },
        },
      ],
      "usage": "import software.amazon.awscdk.services.ecr.AuthorizationToken;

AuthorizationToken.grantRead(IGrantable grantee)",
    },
  ],
}
`;

exports[`java snapshot 2`] = `
" AuthorizationToken <a name=\\"AuthorizationToken\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken\\"></a>

Authorization token to access private ECR repositories in the current environment via Docker CLI.

> [https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html](https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html)


# Static Methods <a name=\\"Static Methods\\" id=\\"Static Methods\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code>grantRead</code> | Grant access to retrieve an authorization token. |

---

**<code>grantRead</code>**
\`\`\`java
import software.amazon.awscdk.services.ecr.AuthorizationToken;

AuthorizationToken.grantRead(IGrantable grantee)
\`\`\`

Grant access to retrieve an authorization token.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>grantee</code> | <code>software.amazon.awscdk.services.iam.IGrantable</code> | *No description.* |


"
`;

exports[`python snapshot 1`] = `
Object {
  "constants": Array [],
  "displayName": "AuthorizationToken",
  "docs": Object {
    "links": Array [
      "https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html",
    ],
    "summary": "Authorization token to access private ECR repositories in the current environment via Docker CLI.",
  },
  "fqn": "aws_cdk.aws_ecr.AuthorizationToken",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken",
  "initializer": undefined,
  "instanceMethods": Array [],
  "interfaces": Array [],
  "properties": Array [],
  "staticMethods": Array [
    Object {
      "displayName": "grant_read",
      "docs": Object {
        "summary": "Grant access to retrieve an authorization token.",
      },
      "fqn": "aws_cdk.aws_ecr.AuthorizationToken.grant_read",
      "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
      "parameters": Array [
        Object {
          "default": undefined,
          "displayName": "grantee",
          "docs": Object {},
          "fqn": "aws_cdk.aws_ecr.AuthorizationToken.grant_read.parameter.grantee",
          "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
          "optional": undefined,
          "type": Object {
            "formattingPattern": "%",
            "types": Array [
              Object {
                "displayName": "IGrantable",
                "fqn": "aws_cdk.aws_iam.IGrantable",
                "id": "@aws-cdk/aws-iam.IGrantable",
                "packageName": "@aws-cdk/aws-iam",
                "packageVersion": "99.99.99",
              },
            ],
          },
        },
      ],
      "usage": "import aws_cdk.aws_ecr

aws_cdk.aws_ecr.AuthorizationToken.grant_read(
  grantee: IGrantable
)",
    },
  ],
}
`;

exports[`python snapshot 2`] = `
" AuthorizationToken <a name=\\"AuthorizationToken\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken\\"></a>

Authorization token to access private ECR repositories in the current environment via Docker CLI.

> [https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html](https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html)


# Static Methods <a name=\\"Static Methods\\" id=\\"Static Methods\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code>grant_read</code> | Grant access to retrieve an authorization token. |

---

**<code>grant_read</code>**
\`\`\`python
import aws_cdk.aws_ecr

aws_cdk.aws_ecr.AuthorizationToken.grant_read(
  grantee: IGrantable
)
\`\`\`

Grant access to retrieve an authorization token.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>grantee</code> | <code>aws_cdk.aws_iam.IGrantable</code> | *No description.* |


"
`;

exports[`typescript snapshot 1`] = `
Object {
  "constants": Array [],
  "displayName": "AuthorizationToken",
  "docs": Object {
    "links": Array [
      "https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html",
    ],
    "summary": "Authorization token to access private ECR repositories in the current environment via Docker CLI.",
  },
  "fqn": "@aws-cdk/aws-ecr.AuthorizationToken",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken",
  "initializer": undefined,
  "instanceMethods": Array [],
  "interfaces": Array [],
  "properties": Array [],
  "staticMethods": Array [
    Object {
      "displayName": "grantRead",
      "docs": Object {
        "summary": "Grant access to retrieve an authorization token.",
      },
      "fqn": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
      "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
      "parameters": Array [
        Object {
          "default": undefined,
          "displayName": "grantee",
          "docs": Object {},
          "fqn": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
          "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
          "optional": undefined,
          "type": Object {
            "formattingPattern": "%",
            "types": Array [
              Object {
                "displayName": "IGrantable",
                "fqn": "@aws-cdk/aws-iam.IGrantable",
                "id": "@aws-cdk/aws-iam.IGrantable",
                "packageName": "@aws-cdk/aws-iam",
                "packageVersion": "99.99.99",
              },
            ],
          },
        },
      ],
      "usage": "import { AuthorizationToken } from '@aws-cdk/aws-ecr'

AuthorizationToken.grantRead(grantee: IGrantable)",
    },
  ],
}
`;

exports[`typescript snapshot 2`] = `
" AuthorizationToken <a name=\\"AuthorizationToken\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken\\"></a>

Authorization token to access private ECR repositories in the current environment via Docker CLI.

> [https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html](https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html)


# Static Methods <a name=\\"Static Methods\\" id=\\"Static Methods\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code>grantRead</code> | Grant access to retrieve an authorization token. |

---

**<code>grantRead</code>**
\`\`\`typescript
import { AuthorizationToken } from '@aws-cdk/aws-ecr'

AuthorizationToken.grantRead(grantee: IGrantable)
\`\`\`

Grant access to retrieve an authorization token.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>grantee</code> | <code>@aws-cdk/aws-iam.IGrantable</code> | *No description.* |


"
`;

exports[`wing snapshot 1`] = `
Object {
  "constants": Array [],
  "displayName": "AuthorizationToken",
  "docs": Object {
    "links": Array [
      "https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html",
    ],
    "summary": "Authorization token to access private ECR repositories in the current environment via Docker CLI.",
  },
  "fqn": "@aws-cdk/aws-ecr.AuthorizationToken",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken",
  "initializer": undefined,
  "instanceMethods": Array [],
  "interfaces": Array [],
  "properties": Array [],
  "staticMethods": Array [
    Object {
      "displayName": "grantRead",
      "docs": Object {
        "summary": "Grant access to retrieve an authorization token.",
      },
      "fqn": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
      "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead",
      "parameters": Array [
        Object {
          "default": undefined,
          "displayName": "grantee",
          "docs": Object {},
          "fqn": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
          "id": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
          "optional": undefined,
          "type": Object {
            "formattingPattern": "%",
            "types": Array [
              Object {
                "displayName": "IGrantable",
                "fqn": "@aws-cdk/aws-iam.IGrantable",
                "id": "@aws-cdk/aws-iam.IGrantable",
                "packageName": "@aws-cdk/aws-iam",
                "packageVersion": "99.99.99",
              },
            ],
          },
        },
      ],
      "usage": "bring { AuthorizationToken } from \\"@aws-cdk/aws-ecr\\"

AuthorizationToken.grantRead(grantee: IGrantable)",
    },
  ],
}
`;

exports[`wing snapshot 2`] = `
" AuthorizationToken <a name=\\"AuthorizationToken\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken\\"></a>

Authorization token to access private ECR repositories in the current environment via Docker CLI.

> [https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html](https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html)


# Static Methods <a name=\\"Static Methods\\" id=\\"Static Methods\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code>grantRead</code> | Grant access to retrieve an authorization token. |

---

**<code>grantRead</code>**
\`\`\`wing
bring { AuthorizationToken } from \\"@aws-cdk/aws-ecr\\"

AuthorizationToken.grantRead(grantee: IGrantable)
\`\`\`

Grant access to retrieve an authorization token.

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>grantee</code> | <code>@aws-cdk/aws-iam.IGrantable</code> | *No description.* |


"
`;
